manifesto/stress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stress
  namespace: skills
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: stress-alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-09b6d4b0c64d837d8,subnet-09aba02ab68d2e039,subnet-08e1121edf2bfa670
    alb.ingress.kubernetes.io/security-groups: sg-03858f240bf46e233
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=0
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/actions.response-403: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403","messageBody":"403 error text"}}
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /v1/
        pathType: Prefix
        backend:
          service:
            name: stress-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: response-403
            port:
              name: use-annotation
