manifesto/stress/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-stress
  namespace: skills
spec:
  podSelector:
    matchLabels:
      app: stress
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-ingress-stress
  namespace: skills
spec:
  podSelector:
    matchLabels:
      app: stress
  policyTypes:
    - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.2.133/16
    - ipBlock:
        cidr: 10.0.0.147/16
    - ipBlock:
        cidr: 10.0.1.113/16
    - ipBlock:
        cidr: 10.0.2.214/16
    - ipBlock:
        cidr: 10.0.1.18/16
    - ipBlock:
        cidr: 10.0.0.35/16
